<resources>
    <string name="app_name">Stonk</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="footer">Footer</string>
    <string name="time_6M">6M</string>
    <string name="time_1D">1D</string>
    <string name="time_2D">2D</string>
    <string name="time_5D">5D</string>
    <string name="time_10D">10D</string>
    <string name="time_all">ALL</string>
    <string name="usth">USTH</string>
    <string name="usth_retake_corp">USTH Retake Corp.</string>
    <string name="up_percent">+0.62%</string>
    <string name="up_val">+1.10</string>
    <string name="stock_val">179.07</string>
    <string name="open">Open</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="float1">177.52</string>
    <string name="float2">179.63</string>
    <string name="float3">177.13</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="search">Search…</string>
    <string name="stock_market">Stock Market</string>
    <string name="date">Date</string>
    <string name="some_id">0.00</string>
    <string name="buy">BUY</string>
    <string name="price">Price</string>
    <string name="mass">Mass</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="hello">Hello !</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_normal">Sign Up</string>
    <string name="account">Account</string>
    <string name="login_details">Login Details</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? Sign up</string>
    <string name="log_in_2">Log in</string>
    <string name="sign_up_2">Sign up</string>
    <string name="my_stocks">My Stocks</string>
    <string name="box">Box</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
</resources>